Significant refactor of alignment code to fix array error. Speed up example display by caching spaCy nlp. Exclude hidden files from file search. Added xsum pre-loaded files. Minor javascript changes. Gray out non-selected underlines in proxy document rather than hide. Do not recompute spaCy outputs in interface. Remove max N-gram length. Only split out parentheses in initial preprocessing rather than all punctuation.

--- a/summvis.css
+++ b/summvis.css
@@ -161,7 +161,7 @@ body {
     font-weight: 400;
 }
 
-.summary-item.selected .name {
+.summary-item.selected.selectable .name {
     font-weight: 500;
 }
 
@@ -169,11 +169,11 @@ body {
     opacity: 0.5 !important;
 }
 
-.stopword {
+.annotated .stopword {
     opacity: 50%
 }
 
-.has-lexical-alignment .summary-item {
+.has-lexical-alignment .summary-item.annotated {
     /* Bold all non-underlined items */
     font-weight: 500;
 }
